# django-stagesetting

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  CHANGELOG  LICENSE  MANIFEST.in  Makefile  README.rst  conftest.py  demo_project.py  setup.cfg  setup.py  test_urls.py  tox.ini
stagesetting/: __init__.py  admin.py  apps.py  cbvmixins.py  checks.py  context_processors.py  drf.py  forms.py  middleware.py  models.py  presets.py  test_models.py  urls.py  utils.py  validators.py  views.py  widgets.py
stagesetting/management/commands/: stagesetting.py
stagesetting/migrations/: 0001_initial.py
stagesetting/templates/admin/stagesetting/: add_form.html  change_form.html
stagesetting/templates/stagesetting/: create.html  delete.html  list.html  update.html
stagesetting/templatetags/: stagesetting.py
test_app/: __init__.py  apps.py  forms.py
test_app/static/subdir/: file_found_2.txt
test_app/templates/: example_usage.html
tests/: __init__.py  _compat.py  test_admin.py  test_checks.py  test_context_processors.py  test_drf.py  test_forms.py  test_models.py  test_templatetags.py  test_utils.py
