[pytest]
norecursedirs=.* *.egg .svn _build src bin lib local include
addopts = --cov stagesetting --cov-report term --cov-report html

[metadata]
license-file = LICENSE

[wheel]
universal = 1

[flake8]
max-line-length = 80

[check-manifest]
ignore-default-rules = true
ignore =
    .travis.yml
    .bumpversion.cfg
    PKG-INFO
    .eggs
    .idea
    .tox
    __pycache__
    bin
    include
    lib
    local
    share
    .Python
    *.egg-info
    *.egg-info/*
    setup.cfg
    .hgtags
    .hgignore
    .gitignore
    .bzrignore
    *.mo

[isort]
line_length = 80
wrap_length = 79
balanced_wrapping = true
multi_line_output = 0
atomic = true
combine_star = true
include_trailing_comma = false
from_first = false
forced_separate = django.contrib
